# pharaoh

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
examples/: foo.yaml
src/: gather.rs  lib.rs  main.rs  printer.rs  runner.rs  test_case.rs  testcase.rs
src/gatherer/: mod.rs  yaml.rs
src/gatherer/yaml/: mod.rs  parser.rs  utils.rs  walker.rs
src/printer/: formatter.rs  mod.rs
src/runner/: executor.rs  mod.rs
src/types/: mod.rs  result.rs  testcase.rs
tests/: cli.rs
