[package]
name = "cli"
version = "0.1.0"
authors = ["Kévin Sztern <sztern.kevin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.0"
assert_fs = "1.0.4"
