[package]
name = "pharaoh"
version = "0.1.0"
authors = ["Kévin Sztern <sztern.kevin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.8.1"
tempfile = "3.2.0"
clap = "2.33.3"

[dev-dependencies]
assert_cmd = "2.0.0"
