[package]
name = "pharaoh"
version = "0.1.1-alpha.1"
authors = ["Kévin Sztern <sztern.kevin@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A dead simple functional testing tool for command line applications"
readme = "README.md"
homepage = "https://github.com/chewie/pharaoh"
repository = "https://github.com/chewie/pharaoh"
keywords = ["testing", "cli"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.8.1"
tempfile = "3.2.0"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.20"
indoc = "1.0.3"
similar = "1.3.0"
colored = "2.0.0"

[dev-dependencies]
predicates = "2.0.2"
assert_cmd = "2.0.1"
pretty_assertions = "0.7.2"
